# packages4py

./: README.md
Cython-0.29.14/: .gitrev
Cython-0.29.14/docs/: make.bat
XlsxWriter-1.2.6/: PKG-INFO
XlsxWriter-1.2.6/XlsxWriter.egg-info/: SOURCES.txt
joblib-0.14.0/: PKG-INFO  setup.cfg
joblib-0.14.0/joblib.egg-info/: SOURCES.txt
lml-0.0.9/: setup.cfg
lml-0.0.9/lml.egg-info/: PKG-INFO  SOURCES.txt
matplotlib-3.1.1/: setupext.py
matplotlib-3.1.1/lib/matplotlib.egg-info/: SOURCES.txt
numpy-1.17.4/doc/release/: 1.17.3-notes.rst
numpy-1.17.4/numpy/random/: bit_generator.c  bounded_integers.c  bounded_integers.pxd  bounded_integers.pyx  common.c  mt19937.c  (+5 more)
numpy-1.17.4/tools/: openblas_support.py
openpyxl-3.0.1/: setup.py
pandas-0.25.3/: setup.cfg
pandas-0.25.3/pandas.egg-info/: SOURCES.txt
pyexcel-0.5.15/docs/: make.bat
pyexcel-0.5.15/pyexcel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyexcel-io-0.5.20/pyexcel_io.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyparsing-2.4.5/: PKG-INFO
pytest-5.2.4/: PKG-INFO  setup.cfg
python-dateutil-2.8.1/: setup.cfg
scikit-image-0.16.2/: PKG-INFO
scikit-learn-0.21.3/: PKG-INFO
scikit-learn-0.21.3/sklearn/: _isotonic.c
scipy-1.3.2/: PKG-INFO
setuptools-41.6.0/: setup.cfg
setuptools-41.6.0/setuptools.egg-info/: PKG-INFO
setuptools_scm-3.3.3/: PKG-INFO  setup.cfg
texttable-1.6.2/texttable.egg-info/: SOURCES.txt
xlwings-0.16.0/xlwings/: __init__.py  quickstart_standalone_mac.xlsm  quickstart_standalone_win.xlsm  xlwings.bas
xlwings-0.16.0/xlwings.egg-info/: PKG-INFO  SOURCES.txt
(+316 files in other folders)
