[aliases]
release = egg_info -RDb ''
upload = upload upload_docs --upload-dir doc/_build/html

[bdist_rpm]
doc-files = doc

[wheel]
universal = 1

[tool:pytest]
addopts = 
	--doctest-glob="doc/*.rst"
	--doctest-modules
	-p no:warnings
	--ignore joblib/externals
testpaths = joblib

[flake8]
ignore = E402,W504
exclude = joblib/externals/*

[metadata]
license_file = LICENSE.txt

[egg_info]
tag_build = 
tag_date = 0

